// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PluggableDependencyWheelChart > dependency wheel should allow date attribute in attribute (from/to) 1`] = `
{
  "buckets": [
    {
      "items": [
        {
          "aggregation": null,
          "attribute": "aazb6kroa3iC",
          "localIdentifier": "m1",
          "showInPercent": null,
          "showOnSecondaryAxis": null,
          "type": "metric",
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "aggregation": null,
          "attribute": "attr.datedataset",
          "filters": [
            {
              "attribute": "attr.datedataset",
              "interval": {
                "granularity": "GDC.year",
                "interval": [
                  -1,
                  0,
                ],
                "name": "name",
                "type": "absolute",
              },
              "overTimeComparisonType": "nothing",
            },
          ],
          "localIdentifier": "a1",
          "showInPercent": null,
          "type": "date",
        },
      ],
      "localIdentifier": "attribute_from",
    },
    {
      "items": [],
      "localIdentifier": "attribute_to",
    },
  ],
  "filters": {
    "items": [
      {
        "aggregation": null,
        "attribute": "attr.datedataset",
        "filters": [
          {
            "attribute": "attr.datedataset",
            "interval": {
              "granularity": "GDC.year",
              "interval": [
                -1,
                0,
              ],
              "name": "name",
              "type": "absolute",
            },
            "overTimeComparisonType": "nothing",
          },
        ],
        "localIdentifier": "f1",
        "type": "date",
      },
    ],
    "localIdentifier": "filters",
  },
  "uiConfig": {
    "buckets": {
      "attribute_from": {
        "accepts": [
          "attribute",
          "date",
        ],
        "allowsReordering": false,
        "allowsSwapping": true,
        "canAddItems": true,
        "enabled": true,
        "icon": "local:dependencyWheel/bucket-title-from.svg",
        "isShowInPercentEnabled": false,
        "itemsLimit": 1,
        "itemsLimitByType": {
          "date": 1,
        },
        "subtitle": "from",
        "title": "Attribute",
      },
      "attribute_to": {
        "accepts": [
          "attribute",
          "date",
        ],
        "allowsReordering": false,
        "allowsSwapping": true,
        "canAddItems": true,
        "enabled": true,
        "icon": "local:dependencyWheel/bucket-title-to.svg",
        "isShowInPercentEnabled": false,
        "itemsLimit": 1,
        "itemsLimitByType": {
          "date": 1,
        },
        "subtitle": "to",
        "title": "Attribute",
      },
      "filters": {
        "accepts": [
          "attribute",
          "date",
        ],
        "allowsReordering": false,
        "enabled": true,
        "isShowInPercentEnabled": false,
        "itemsLimit": 20,
        "itemsLimitByType": {
          "date": 1,
        },
      },
      "measures": {
        "accepts": [
          "metric",
          "fact",
          "attribute",
        ],
        "allowsDuplicateItems": true,
        "allowsReordering": false,
        "allowsSwapping": true,
        "canAddItems": true,
        "enabled": true,
        "icon": "local:dependencyWheel/bucket-title-measures.svg",
        "isShowInPercentEnabled": true,
        "isShowInPercentVisible": true,
        "itemsLimit": 1,
        "title": "MEASURE",
      },
    },
    "exportConfig": {
      "supported": true,
    },
    "openAsReport": {
      "supported": false,
    },
    "recommendations": {},
    "supportedOverTimeComparisonTypes": [],
  },
}
`;

exports[`PluggableDependencyWheelChart > should return reference point with one metric, attributeFrom, attributeTo and valid filters 1`] = `
{
  "buckets": [
    {
      "items": [
        {
          "aggregation": null,
          "attribute": "aazb6kroa3iC",
          "localIdentifier": "m1",
          "showInPercent": null,
          "showOnSecondaryAxis": null,
          "type": "metric",
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "aggregation": null,
          "attribute": "attr.owner.department",
          "dfRef": {
            "uri": "a1/df",
          },
          "localIdentifier": "a1",
          "type": "attribute",
        },
      ],
      "localIdentifier": "attribute_from",
    },
    {
      "items": [
        {
          "aggregation": null,
          "attribute": "attr.stage.iswon",
          "dfRef": {
            "uri": "a2/df",
          },
          "localIdentifier": "a2",
          "type": "attribute",
        },
      ],
      "localIdentifier": "attribute_to",
    },
  ],
  "filters": {
    "items": [],
    "localIdentifier": "filters",
  },
  "properties": {
    "sortItems": [],
  },
  "uiConfig": {
    "buckets": {
      "attribute_from": {
        "accepts": [
          "attribute",
          "date",
        ],
        "allowsReordering": false,
        "allowsSwapping": true,
        "canAddItems": true,
        "enabled": true,
        "icon": "local:dependencyWheel/bucket-title-from.svg",
        "isShowInPercentEnabled": false,
        "itemsLimit": 1,
        "itemsLimitByType": {
          "date": 1,
        },
        "subtitle": "from",
        "title": "Attribute",
      },
      "attribute_to": {
        "accepts": [
          "attribute",
          "date",
        ],
        "allowsReordering": false,
        "allowsSwapping": true,
        "canAddItems": true,
        "enabled": true,
        "icon": "local:dependencyWheel/bucket-title-to.svg",
        "isShowInPercentEnabled": false,
        "itemsLimit": 1,
        "itemsLimitByType": {
          "date": 1,
        },
        "subtitle": "to",
        "title": "Attribute",
      },
      "filters": {
        "accepts": [
          "attribute",
          "date",
        ],
        "allowsReordering": false,
        "enabled": true,
        "isShowInPercentEnabled": false,
        "itemsLimit": 20,
        "itemsLimitByType": {
          "date": 1,
        },
      },
      "measures": {
        "accepts": [
          "metric",
          "fact",
          "attribute",
        ],
        "allowsDuplicateItems": true,
        "allowsReordering": false,
        "allowsSwapping": true,
        "canAddItems": true,
        "enabled": true,
        "icon": "local:dependencyWheel/bucket-title-measures.svg",
        "isShowInPercentEnabled": true,
        "isShowInPercentVisible": true,
        "itemsLimit": 1,
        "title": "MEASURE",
      },
    },
    "exportConfig": {
      "supported": true,
    },
    "openAsReport": {
      "supported": false,
    },
    "recommendations": {},
    "supportedOverTimeComparisonTypes": [],
  },
}
`;

exports[`PluggableDependencyWheelChart > should reuse one measure and order attribute types 1`] = `
{
  "buckets": [
    {
      "items": [
        {
          "aggregation": null,
          "attribute": "aazb6kroa3iC",
          "localIdentifier": "m1",
          "showInPercent": null,
          "showOnSecondaryAxis": null,
          "type": "metric",
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "aggregation": null,
          "attribute": "attr.owner.department",
          "dfRef": {
            "uri": "a1/df",
          },
          "localIdentifier": "a1",
          "type": "attribute",
        },
      ],
      "localIdentifier": "attribute_from",
    },
    {
      "items": [
        {
          "aggregation": null,
          "attribute": "attr.stage.iswon",
          "dfRef": {
            "uri": "a2/df",
          },
          "localIdentifier": "a2",
          "type": "attribute",
        },
      ],
      "localIdentifier": "attribute_to",
    },
  ],
  "filters": {
    "items": [
      {
        "aggregation": null,
        "attribute": "attr.owner.department",
        "filters": [
          {
            "attribute": "attr.owner.department",
            "displayFormRef": {
              "uri": "owner/attribute/df/uri",
            },
            "isInverted": false,
            "selectedElements": [
              {
                "title": "string",
                "uri": "string",
              },
            ],
            "totalElementsCount": 10,
          },
        ],
        "localIdentifier": "a1",
        "type": "attribute",
      },
      {
        "aggregation": null,
        "attribute": "attr.stage.iswon",
        "filters": [
          {
            "attribute": "attr.stage.iswon",
            "displayFormRef": {
              "uri": "iswon/attribute/df/uri",
            },
            "isInverted": true,
            "selectedElements": [
              {
                "title": "string",
                "uri": "string",
              },
            ],
            "totalElementsCount": 10,
          },
        ],
        "localIdentifier": "a2",
        "type": "attribute",
      },
    ],
    "localIdentifier": "filters",
  },
  "properties": {
    "sortItems": [
      {
        "attributeSortItem": {
          "attributeIdentifier": "a1",
          "direction": "asc",
        },
      },
    ],
  },
  "uiConfig": {
    "buckets": {
      "attribute_from": {
        "accepts": [
          "attribute",
          "date",
        ],
        "allowsReordering": false,
        "allowsSwapping": true,
        "canAddItems": true,
        "enabled": true,
        "icon": "local:dependencyWheel/bucket-title-from.svg",
        "isShowInPercentEnabled": false,
        "itemsLimit": 1,
        "itemsLimitByType": {
          "date": 1,
        },
        "subtitle": "from",
        "title": "Attribute",
      },
      "attribute_to": {
        "accepts": [
          "attribute",
          "date",
        ],
        "allowsReordering": false,
        "allowsSwapping": true,
        "canAddItems": true,
        "enabled": true,
        "icon": "local:dependencyWheel/bucket-title-to.svg",
        "isShowInPercentEnabled": false,
        "itemsLimit": 1,
        "itemsLimitByType": {
          "date": 1,
        },
        "subtitle": "to",
        "title": "Attribute",
      },
      "filters": {
        "accepts": [
          "attribute",
          "date",
        ],
        "allowsReordering": false,
        "enabled": true,
        "isShowInPercentEnabled": false,
        "itemsLimit": 20,
        "itemsLimitByType": {
          "date": 1,
        },
      },
      "measures": {
        "accepts": [
          "metric",
          "fact",
          "attribute",
        ],
        "allowsDuplicateItems": true,
        "allowsReordering": false,
        "allowsSwapping": true,
        "canAddItems": true,
        "enabled": true,
        "icon": "local:dependencyWheel/bucket-title-measures.svg",
        "isShowInPercentEnabled": true,
        "isShowInPercentVisible": true,
        "itemsLimit": 1,
        "title": "MEASURE",
      },
    },
    "exportConfig": {
      "supported": true,
    },
    "openAsReport": {
      "supported": false,
    },
    "recommendations": {},
    "supportedOverTimeComparisonTypes": [],
  },
}
`;

exports[`PluggableDependencyWheelChart dependency wheel should allow date attribute in attribute (from/to) 1`] = `
Object {
  "buckets": Array [
    Object {
      "items": Array [
        Object {
          "aggregation": null,
          "attribute": "aazb6kroa3iC",
          "localIdentifier": "m1",
          "showInPercent": null,
          "showOnSecondaryAxis": null,
          "type": "metric",
        },
      ],
      "localIdentifier": "measures",
    },
    Object {
      "items": Array [
        Object {
          "aggregation": null,
          "attribute": "attr.datedataset",
          "filters": Array [
            Object {
              "attribute": "attr.datedataset",
              "interval": Object {
                "granularity": "GDC.year",
                "interval": Array [
                  -1,
                  0,
                ],
                "name": "name",
                "type": "absolute",
              },
              "overTimeComparisonType": "nothing",
            },
          ],
          "localIdentifier": "a1",
          "showInPercent": null,
          "type": "date",
        },
      ],
      "localIdentifier": "attribute_from",
    },
    Object {
      "items": Array [],
      "localIdentifier": "attribute_to",
    },
  ],
  "filters": Object {
    "items": Array [
      Object {
        "aggregation": null,
        "attribute": "attr.datedataset",
        "filters": Array [
          Object {
            "attribute": "attr.datedataset",
            "interval": Object {
              "granularity": "GDC.year",
              "interval": Array [
                -1,
                0,
              ],
              "name": "name",
              "type": "absolute",
            },
            "overTimeComparisonType": "nothing",
          },
        ],
        "localIdentifier": "f1",
        "type": "date",
      },
    ],
    "localIdentifier": "filters",
  },
  "uiConfig": Object {
    "buckets": Object {
      "attribute_from": Object {
        "accepts": Array [
          "attribute",
          "date",
        ],
        "allowsReordering": false,
        "allowsSwapping": true,
        "canAddItems": true,
        "enabled": true,
        "icon": "local:dependencyWheel/bucket-title-from.svg",
        "isShowInPercentEnabled": false,
        "itemsLimit": 1,
        "itemsLimitByType": Object {
          "date": 1,
        },
        "subtitle": "from",
        "title": "Attribute",
      },
      "attribute_to": Object {
        "accepts": Array [
          "attribute",
          "date",
        ],
        "allowsReordering": false,
        "allowsSwapping": true,
        "canAddItems": true,
        "enabled": true,
        "icon": "local:dependencyWheel/bucket-title-to.svg",
        "isShowInPercentEnabled": false,
        "itemsLimit": 1,
        "itemsLimitByType": Object {
          "date": 1,
        },
        "subtitle": "to",
        "title": "Attribute",
      },
      "filters": Object {
        "accepts": Array [
          "attribute",
          "date",
        ],
        "allowsReordering": false,
        "enabled": true,
        "isShowInPercentEnabled": false,
        "itemsLimit": 20,
        "itemsLimitByType": Object {
          "date": 1,
        },
      },
      "measures": Object {
        "accepts": Array [
          "metric",
          "fact",
          "attribute",
        ],
        "allowsDuplicateItems": true,
        "allowsReordering": false,
        "allowsSwapping": true,
        "canAddItems": true,
        "enabled": true,
        "icon": "local:dependencyWheel/bucket-title-measures.svg",
        "isShowInPercentEnabled": true,
        "isShowInPercentVisible": true,
        "itemsLimit": 1,
        "title": "MEASURE",
      },
    },
    "exportConfig": Object {
      "supported": true,
    },
    "openAsReport": Object {
      "supported": false,
    },
    "recommendations": Object {},
    "supportedOverTimeComparisonTypes": Array [],
  },
}
`;

exports[`PluggableDependencyWheelChart should return reference point with one metric, attributeFrom, attributeTo and valid filters 1`] = `
Object {
  "buckets": Array [
    Object {
      "items": Array [
        Object {
          "aggregation": null,
          "attribute": "aazb6kroa3iC",
          "localIdentifier": "m1",
          "showInPercent": null,
          "showOnSecondaryAxis": null,
          "type": "metric",
        },
      ],
      "localIdentifier": "measures",
    },
    Object {
      "items": Array [
        Object {
          "aggregation": null,
          "attribute": "attr.owner.department",
          "dfRef": Object {
            "uri": "a1/df",
          },
          "localIdentifier": "a1",
          "type": "attribute",
        },
      ],
      "localIdentifier": "attribute_from",
    },
    Object {
      "items": Array [
        Object {
          "aggregation": null,
          "attribute": "attr.stage.iswon",
          "dfRef": Object {
            "uri": "a2/df",
          },
          "localIdentifier": "a2",
          "type": "attribute",
        },
      ],
      "localIdentifier": "attribute_to",
    },
  ],
  "filters": Object {
    "items": Array [],
    "localIdentifier": "filters",
  },
  "properties": Object {
    "sortItems": Array [],
  },
  "uiConfig": Object {
    "buckets": Object {
      "attribute_from": Object {
        "accepts": Array [
          "attribute",
          "date",
        ],
        "allowsReordering": false,
        "allowsSwapping": true,
        "canAddItems": true,
        "enabled": true,
        "icon": "local:dependencyWheel/bucket-title-from.svg",
        "isShowInPercentEnabled": false,
        "itemsLimit": 1,
        "itemsLimitByType": Object {
          "date": 1,
        },
        "subtitle": "from",
        "title": "Attribute",
      },
      "attribute_to": Object {
        "accepts": Array [
          "attribute",
          "date",
        ],
        "allowsReordering": false,
        "allowsSwapping": true,
        "canAddItems": true,
        "enabled": true,
        "icon": "local:dependencyWheel/bucket-title-to.svg",
        "isShowInPercentEnabled": false,
        "itemsLimit": 1,
        "itemsLimitByType": Object {
          "date": 1,
        },
        "subtitle": "to",
        "title": "Attribute",
      },
      "filters": Object {
        "accepts": Array [
          "attribute",
          "date",
        ],
        "allowsReordering": false,
        "enabled": true,
        "isShowInPercentEnabled": false,
        "itemsLimit": 20,
        "itemsLimitByType": Object {
          "date": 1,
        },
      },
      "measures": Object {
        "accepts": Array [
          "metric",
          "fact",
          "attribute",
        ],
        "allowsDuplicateItems": true,
        "allowsReordering": false,
        "allowsSwapping": true,
        "canAddItems": true,
        "enabled": true,
        "icon": "local:dependencyWheel/bucket-title-measures.svg",
        "isShowInPercentEnabled": true,
        "isShowInPercentVisible": true,
        "itemsLimit": 1,
        "title": "MEASURE",
      },
    },
    "exportConfig": Object {
      "supported": true,
    },
    "openAsReport": Object {
      "supported": false,
    },
    "recommendations": Object {},
    "supportedOverTimeComparisonTypes": Array [],
  },
}
`;

exports[`PluggableDependencyWheelChart should reuse one measure and order attribute types 1`] = `
Object {
  "buckets": Array [
    Object {
      "items": Array [
        Object {
          "aggregation": null,
          "attribute": "aazb6kroa3iC",
          "localIdentifier": "m1",
          "showInPercent": null,
          "showOnSecondaryAxis": null,
          "type": "metric",
        },
      ],
      "localIdentifier": "measures",
    },
    Object {
      "items": Array [
        Object {
          "aggregation": null,
          "attribute": "attr.owner.department",
          "dfRef": Object {
            "uri": "a1/df",
          },
          "localIdentifier": "a1",
          "type": "attribute",
        },
      ],
      "localIdentifier": "attribute_from",
    },
    Object {
      "items": Array [
        Object {
          "aggregation": null,
          "attribute": "attr.stage.iswon",
          "dfRef": Object {
            "uri": "a2/df",
          },
          "localIdentifier": "a2",
          "type": "attribute",
        },
      ],
      "localIdentifier": "attribute_to",
    },
  ],
  "filters": Object {
    "items": Array [
      Object {
        "aggregation": null,
        "attribute": "attr.owner.department",
        "filters": Array [
          Object {
            "attribute": "attr.owner.department",
            "displayFormRef": Object {
              "uri": "owner/attribute/df/uri",
            },
            "isInverted": false,
            "selectedElements": Array [
              Object {
                "title": "string",
                "uri": "string",
              },
            ],
            "totalElementsCount": 10,
          },
        ],
        "localIdentifier": "a1",
        "type": "attribute",
      },
      Object {
        "aggregation": null,
        "attribute": "attr.stage.iswon",
        "filters": Array [
          Object {
            "attribute": "attr.stage.iswon",
            "displayFormRef": Object {
              "uri": "iswon/attribute/df/uri",
            },
            "isInverted": true,
            "selectedElements": Array [
              Object {
                "title": "string",
                "uri": "string",
              },
            ],
            "totalElementsCount": 10,
          },
        ],
        "localIdentifier": "a2",
        "type": "attribute",
      },
    ],
    "localIdentifier": "filters",
  },
  "properties": Object {
    "sortItems": Array [
      Object {
        "attributeSortItem": Object {
          "attributeIdentifier": "a1",
          "direction": "asc",
        },
      },
    ],
  },
  "uiConfig": Object {
    "buckets": Object {
      "attribute_from": Object {
        "accepts": Array [
          "attribute",
          "date",
        ],
        "allowsReordering": false,
        "allowsSwapping": true,
        "canAddItems": true,
        "enabled": true,
        "icon": "local:dependencyWheel/bucket-title-from.svg",
        "isShowInPercentEnabled": false,
        "itemsLimit": 1,
        "itemsLimitByType": Object {
          "date": 1,
        },
        "subtitle": "from",
        "title": "Attribute",
      },
      "attribute_to": Object {
        "accepts": Array [
          "attribute",
          "date",
        ],
        "allowsReordering": false,
        "allowsSwapping": true,
        "canAddItems": true,
        "enabled": true,
        "icon": "local:dependencyWheel/bucket-title-to.svg",
        "isShowInPercentEnabled": false,
        "itemsLimit": 1,
        "itemsLimitByType": Object {
          "date": 1,
        },
        "subtitle": "to",
        "title": "Attribute",
      },
      "filters": Object {
        "accepts": Array [
          "attribute",
          "date",
        ],
        "allowsReordering": false,
        "enabled": true,
        "isShowInPercentEnabled": false,
        "itemsLimit": 20,
        "itemsLimitByType": Object {
          "date": 1,
        },
      },
      "measures": Object {
        "accepts": Array [
          "metric",
          "fact",
          "attribute",
        ],
        "allowsDuplicateItems": true,
        "allowsReordering": false,
        "allowsSwapping": true,
        "canAddItems": true,
        "enabled": true,
        "icon": "local:dependencyWheel/bucket-title-measures.svg",
        "isShowInPercentEnabled": true,
        "isShowInPercentVisible": true,
        "itemsLimit": 1,
        "title": "MEASURE",
      },
    },
    "exportConfig": Object {
      "supported": true,
    },
    "openAsReport": Object {
      "supported": false,
    },
    "recommendations": Object {},
    "supportedOverTimeComparisonTypes": Array [],
  },
}
`;
